fixed MOZ in text align

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 h1 {
 	font-size: 80px;
-	text-align: -moz-center;
+	text-align: center;
 	text-shadow: 2px 4px 2px rgb(255, 137, 0);
 }
 
